tests/transpiler/x/fs/string_in_operator.fs
// Mochi 0.10.31 - generated 2025-07-19 12:45:06 UTC
open System

let s = "catch"
printfn "%s" (string ("cat" in s))
printfn "%s" (string ("dog" in s))
